# napari-cilia-assistant

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/napari_cilia_assistant/: _analysis.py  _widget.py  napari.yaml
src/napari_cilia_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/napari_cilia_assistant/analysis/: __init__.py  activity.py  frequency.py  heatmap.py  optical_flow.py
src/napari_cilia_assistant/tabs/: __init__.py  advanced_flow_tab.py  cbf_heatmap_tab.py  motion_activity_tab.py  roi_frequency_tab.py
