[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-cilia-assistant"
version = "1.0.2"
description = "A napari plugin for measuring ciliary beat frequency from high-speed microscopy videos."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Wulin Teo" }
]
dependencies = [
    "napari",
    "numpy",
    "scipy",
    "opencv-python",
    "qtpy",
    "magicgui",
    "matplotlib"
]
classifiers = [
    "Framework :: napari",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://github.com/wulinteousa2-hash/napari-cilia-assistant"
Repository = "https://github.com/wulinteousa2-hash/napari-cilia-assistant"
Issues = "https://github.com/wulinteousa2-hash/napari-cilia-assistant/issues"


[project.entry-points."napari.manifest"]
napari-cilia-assistant = "napari_cilia_assistant:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
napari_cilia_assistant = ["napari.yaml"]
